# connectivity-check

./: .gitignore  LICENSE  README.md  badchecks.yaml  failingchecks.yaml  poetry.toml  pyproject.toml  successfulchecks.yaml
.github/actions/setup-and-run-tests/: action.yml
.github/workflows/: test-and-publish.yml  validate.yml
connectivity_check/: __init__.py  __main__.py  check_cert.py  check_content.py  check_latency.py  check_routing.py  check_speed_cloudflare.py  check_speed_ookla.py  checks.py  datadog.py  exceptions.py
tests/: cert.der  create_test_der  test_check_cert.py  test_check_content.py  test_check_latency.py  test_checks.py  test_cli.py  test_datadog.py  test_routing.py  test_speed_cloudflare.py  test_speed_ookla.py
